fix top nav button spacing

--- a/packages/cardhost/app/styles/app.css
+++ b/packages/cardhost/app/styles/app.css
@@ -50,7 +50,7 @@ Until that work is done we are statically adding this css
 
   --ch-left-edge-navbar-width: 80px;
   --ch-left-edge-panel-width: 330px;
-  --ch-right-edge-panel-width: 300px;
+  --ch-right-edge-panel-width: 330px;
 
   --ch-top-edge-height: 80px;
   --ch-left-edge-width: calc(var(--ch-left-edge-panel-width) + var(--ch-left-edge-navbar-width));
